Update from darren regarding thanks messages

--- a/form/thanks.html
+++ b/form/thanks.html
@@ -7,6 +7,6 @@
 <body>
 <!--	<div class="success">Thank you for registering with us!<br/>A confirmation email has been sent to you.<br/>Please click on the activation Link to activate your account</div>-->
 	<!--<div class="success">Thanks for registering with us.<br/>We have just sent you a confirmation email.<br/>Please click on the activation Link that we have sent in mail to activate your account.</div>-->
-	<div class="success">Thanks for signing up!<br/>Your are just steps away from beginning to build your own local guide!You will receive an email shortly with an email confirmation link.Click the link in that confirmation email to complete the setup process!</div>
+	<div class="success">Thanks for signing up! Your are just steps away from beginning to build your own local guide! You will receive an email shortly with an email confirmation link. Click the link in that confirmation email to complete the setup process!</div>
 </body>
 </html>
