--- a/form/thanks2.html
+++ b/form/thanks2.html
@@ -5,6 +5,6 @@
 <title>Thank You</title>
 </head>
 <body>
-	<div class='success'>Thanks for completing the signup process! <br/>All of the information needed to begin creating your local guide will be emailed to you shortly!</div>
+	<div class='success'>Thanks for completing the signup process! All of the information needed to begin creating your local guide will be emailed to you shortly!</div>
 </body>
 </html>
